feat: introduce QPilot feature with dedicated frontend pages, state management, backend knowledge graph service, and database schema.

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ websocket
 langgraph
 pymupdf4llm
 docling
+
+npm install @clerk/nextjs
+npm i drizzle-orm @neondatabase/serverless dotenv
+npm i -D drizzle-kit tsx
